force-app/main/default/objects/Opportunity/fields/ARV__c.field-meta.xml
<CustomField>
    <fullName>ARV__c</fullName>
    <label>ARV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>