force-app/main/default/objects/Opportunity/fields/Close_Probability_Score__c.field-meta.xml
<CustomField>
    <fullName>Close_Probability_Score__c</fullName>
    <label>Close Probability Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>