force-app/main/default/objects/Opportunity/fields/Days_In_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Stage__c</fullName>
    <description>Calculates day the opportunity has been in it&apos;s current stage</description>
    <formula>ROUND(NOW() -  LastStageChangeDate , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated based on current time minus last stage change date value</inlineHelpText>
    <label>Days In Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>