force-app/main/default/objects/Opportunity/fields/Days_In_Stage_Demo__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Stage_Demo__c</fullName>
    <description>Only for demonstration of nightly flow.</description>
    <label>Days In Stage Demo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>