force-app/main/default/objects/Opportunity/fields/Due_Diligence_Case__c.field-meta.xml
<CustomField>
    <fullName>Due_Diligence_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used to relate due diligence case to this opportunity</description>
    <label>Due Diligence Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>