force-app/main/default/objects/Opportunity/fields/Estimated_Repairs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Repairs__c</fullName>
    <label>Estimated Repairs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>