force-app/main/default/objects/Opportunity/fields/Investor_Hot_Score__c.field-meta.xml
<CustomField>
    <fullName>Investor_Hot_Score__c</fullName>
    <formula>(Profit_Margin__c * 40 +  Probability * 40 + Seller_Response_Score__c * 20) / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Investor Hot Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>