force-app/main/default/objects/Opportunity/fields/Projected_Profit__c.field-meta.xml
<CustomField>
    <fullName>Projected_Profit__c</fullName>
    <formula>ARV__c - Purchase_Price__c - Estimated_Repairs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>