force-app/main/default/objects/Opportunity/fields/Seller_Response_Score__c.field-meta.xml
<CustomField>
    <fullName>Seller_Response_Score__c</fullName>
    <label>Seller Response Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>